--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@ swap" rel="stylesheet">
   
    
   
-  <article class="lorem">
+  <article class="start">
 
 <h4> Lorem Ipsum </h4>
 <p class="text-1"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
 
 </p>
 
-  </article>
+</article>
   
 
- <container class="content" > 
+ <div class="content" > 
   
   <article class="lorem-1">
 <img class="logo" src="images/File.png" alt="file-pic">
@@ -149,12 +149,12 @@ swap" rel="stylesheet">
 </p>
 
   </article>
-  </container>
+</div>
 
 
 
-<div class="content"> 
-<section class="one" >
+
+<section class="last-item" >
 
   <img class="people" src="images/Illustration.png" alt="illustration">
 
@@ -169,7 +169,7 @@ swap" rel="stylesheet">
 
 
 
-<section class="two">
+<section class="last-item-2">
   
 
 <picture> 
@@ -181,7 +181,7 @@ swap" rel="stylesheet">
 <img class="smallbtn" src="images/smallButton.png" alt="addbtn">
 
 </section>
-</div>
+
 
 
 
